<resources>
    <string name="app_name">Collectors app</string>
    <string name="title_activity_collections">CollectionsActivity</string>
    <string name="title_activity_add_collection">AddCollectionActivity</string>
    <string name="title_activity_collection_view">CollectionViewActivity</string>
    <string name="title_activity_item_view">ItemViewActivity</string>
    <string name="title_activity_add_item">AddItemActivity</string>
    <string name="facebook_app_id">143776942971861</string>
    <string name="fb_login_protocol_scheme">fb143776942971861</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="Description">Description: </string>
    <string name="Continue">Continue</string>
    <string name="welcome">Welcome</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="x">X</string>
    <string name="title">Title</string>
    <string name="specifications">Specifications:</string>
    <string name="save">Save</string>
    <string name="text">Text</string>
    <string name="number">Number</string>
    <string name="logo">Logo</string>

</resources>
