<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/editTextNewSpec"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:inputType="textCapSentences"/>

    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/RadioGroup">

        <RadioButton
            android:text="@string/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/RadioString"
            android:layout_weight="1"
            android:checked="true"/>

        <RadioButton
            android:text="@string/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/RadioInt"
            android:layout_weight="1" />
    </RadioGroup>

</LinearLayout>